# duckdb-glue

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: glue_extension.cpp  glue_reader_extension.cpp
src/include/: glue_extension.hpp  glue_reader_extension.hpp
test/sql/: glue.test
